@startuml

skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 90
skinparam ranksep 40
hide stereotype

skinparam class {
   BackgroundColor White
   BackgroundColor<<Game>> LightPink
   BackgroundColor<<User>> LightBlue
   BackgroundColor<<Invitation>> LightYellow
}
skinparam shadowing false

skinparam package<<Layout>> {
borderColor Transparent
backgroundColor Transparent
fontColor Transparent
stereotypeFontColor Transparent
}

class User <<User>> {
  username: string
  password: string
  email: string
}

package Users <<Layout>>{
  class Player <<User>> {
     currency:float
     Friends: List<Player>
     PlayedGames: List<Game>

  }

  class Admin <<User>> {

  }
}

class Game <<Game>> {
  Id: int
  BoardSeed: int
  Reward: float
  CreatedAt: Date

}


Player "n" --> "n" Player : Is friends with

Game "1" <-- "n" Player : Joins

Admin " " --|> " " User

Player " " --|> " " User

@enduml
